<resources>
    <string name="app_name">Wacky Mole</string>
    <string name="help">Help</string>
    <string name="level">Level:</string>
    <string name="levelCompleted">LevelCompleted!</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="pressPlay">Press play to start.</string>
    <string name="reset">Reset</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <string name="zero">0</string>
</resources>