<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/moleMenu">

    <!-- Play / Pause-->
    <item
        android:id="@+id/playPause"
        android:enabled="true"
        android:icon="@drawable/play"
        android:title="@string/play"
        android:visible="true"
        app:showAsAction="always" />

    <!-- Reset-->
    <item
        android:id="@+id/reset"
        android:enabled="true"
        android:icon="@drawable/reset"
        android:title="@string/reset"
        app:showAsAction="ifRoom" />

    <!-- Help -->
    <item
        android:id="@+id/help"
        android:enabled="true"
        android:icon="@drawable/help"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

</menu>