<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MoleActivity">

    <!-- *************************************************************************************** -->
    <!-- Title                                                                                   -->
    <!-- *************************************************************************************** -->
    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <!-- *************************************************************************************** -->
    <!-- Score, Level and Time                                                                   -->
    <!-- *************************************************************************************** -->

    <!-- Score-->
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/blue"
        android:layout_marginEnd="@dimen/score_margin"
        android:layout_marginStart="@dimen/score_spacing"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/score_spacing"
        app:layout_constraintEnd_toStartOf="@+id/levelText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scoreText"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Level -->
    <TextView
        android:id="@+id/levelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="@color/blue"
        android:layout_marginEnd="@dimen/score_margin"
        app:layout_constraintEnd_toStartOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="42"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/score_spacing"
        app:layout_constraintEnd_toStartOf="@+id/timeText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/levelText"
        tools:layout_editor_absoluteY="61dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <!-- Time-->
    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/blue"
        android:layout_marginEnd="@dimen/score_margin"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/score_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/timeText"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- *************************************************************************************** -->
    <!-- The board                                                                               -->
    <!-- *************************************************************************************** -->
    <GridView
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:numColumns="auto_fit"
        android:gravity="center"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreText" />

</androidx.constraintlayout.widget.ConstraintLayout>