<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_mole"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mole_padding"
    android:layout_margin="@dimen/mole_margin"
    android:background="?attr/colorPrimary"
    tools:context=".MoleActivity">

    <!-- *************************************************************************************** -->
    <!-- Toolbar                                                                                 -->
    <!-- *************************************************************************************** -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/toolbarBackgroundColor"
            >

            <!-- The toolbar. -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                app:titleMarginStart="32dp"
                android:layout_margin="0dp"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- *************************************************************************************** -->
            <!-- Score, Level and Time                                                                   -->
            <!-- *************************************************************************************** -->

            <!-- Score-->
            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/score_spacing"
                android:layout_marginEnd="@dimen/score_margin"
                android:text="@string/score"
                android:textColor="?attr/scoreLevelTimeTextColor"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/score"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:textColor="?attr/scoreLevelTimeValueColor"
                android:layout_marginEnd="@dimen/score_spacing"
                app:layout_constraintEnd_toStartOf="@id/levelText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scoreText"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <!-- Level -->
            <TextView
                android:id="@+id/levelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/score_margin"
                android:text="@string/level"
                android:textSize="@dimen/font_size"
                android:textColor="?attr/scoreLevelTimeTextColor"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/level"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/score"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold"
                android:textSize="@dimen/font_size"
                android:textColor="?attr/scoreLevelTimeValueColor"
                android:layout_marginEnd="@dimen/score_spacing"
                app:layout_constraintEnd_toStartOf="@+id/timeText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/levelText"
                tools:layout_editor_absoluteY="61dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"/>

            <!-- Time-->
            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/score_margin"
                android:text="@string/time"
                android:textSize="@dimen/font_size"
                android:textColor="?attr/scoreLevelTimeTextColor"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/time"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/level"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textStyle="bold"
                android:textSize="@dimen/font_size"
                android:textColor="?attr/scoreLevelTimeValueColor"
                android:layout_marginEnd="@dimen/score_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/timeText"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- *************************************************************************************** -->
    <!-- The board                                                                               -->
    <!-- *************************************************************************************** -->
    <GridView
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mole_margin"
        android:background="?attr/boardBackgroundColor"
        android:columnWidth="@dimen/square_size"
        android:numColumns="auto_fit"
        android:padding="@dimen/mole_padding"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>